--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Corben|Play');
 
 body {
   background-color: #ffff94;
@@ -46,8 +45,9 @@ body {
 }
 
 .text {
+  width: 500px;
   color: white;
-  font-size: 20px;
+  font-size: 40px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -55,4 +55,13 @@ body {
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   text-align: center;
+  font-family: 'Old Standard TT', serif;
+
+}
+
+.small-text{
+	font-size: 18px;
+	font-family: 'Old Standard TT', serif;
+	font-style: italic;
+
 }
