chnaged bg color of boxes

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,8 +36,8 @@ body {
   height: 100%;
   width: 100%;
   opacity: 0;
-  transition: .5s ease;
-  background-color: #008CBA;
+  transition: .2s ease;
+  background-color: rgba(225,145,128);
 }
 
 .box:hover .overlay {
