--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 
 body {
-  background-color: #ffff94;
+  background-color: #ffffff;
   padding-top: 16px;
   padding-right: 56px;
   padding-left: 56px;
