--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -10,50 +10,45 @@ body {
   font-family: 'Play', sans-serif;
 }
 
-/* Add a black background color to the top navigation */
 .topnav {
   position: relative;
   background-color: #fffff;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #000000;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 15px;
+  font-family: 'Open Sans', sans-serif;
+
 }
 
-/* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: #e6a395;
 }
 
-/* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #4CAF50;
-  color: white;
+  color: #d76d57;
 }
 
-/* Centered section inside the top navigation */
 .topnav-centered a {
   float: none;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 30px;
+  font-family: 'Old Standard TT', serif;
+
 }
 
-/* Right-aligned section inside the top navigation */
 .topnav-right {
   float: right;
 }
-
-/* Responsive navigation menu - display links on top of each other instead of next to each other (for mobile devices) */
 @media screen and (max-width: 600px) {
   .topnav a, .topnav-right {
     float: none;
