--- a/dev/styles/style.css
+++ b/dev/styles/style.css
@@ -62,6 +62,11 @@ body {
     transform: none;
   }
 }
+
+.line {
+  height: 55px;
+  border-bottom: 1px solid black;
+}
 .flex-container {
   display: flex;
   flex-wrap: nowrap;
